updated index file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello</h1>
     <h1>First change</h1>
     <h2>Fist change</h2>
-
+    <h2>third change</h2>
     
     <h2>did second changes</h2>
 </body>
